<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".ui.fragments.HomeFragment">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/greeting"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/greeting_2"
        android:textColor="@color/primary"
        android:textSize="17sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_check_your_face_skin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/iv_bg_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="23dp">

            <TextView
                android:id="@+id/tv_check_your_face_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/check_your_face_skin"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_face_skin_scan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_information_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/facial_skin_disorder_information"
        android:textSize="14sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="1"
        android:rowCount="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/card_acne"
                layout="@layout/component_card_facial_skin_disorder_information" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/card_hyperpigmentation"
                layout="@layout/component_card_facial_skin_disorder_information" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/card_redness"
                layout="@layout/component_card_facial_skin_disorder_information" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <include
                android:id="@+id/card_blackheads"
                layout="@layout/component_card_facial_skin_disorder_information" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/card_oily"
                layout="@layout/component_card_facial_skin_disorder_information" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/card_normal"
                layout="@layout/component_card_facial_skin_disorder_information" />
        </LinearLayout>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/application_information"
        android:textSize="14sp" />

    <include
        android:id="@+id/btn_how_to_use"
        layout="@layout/component_button_application_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <include
        android:id="@+id/btn_application_information"
        layout="@layout/component_button_application_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />
</LinearLayout>